2014-10-23  Eli Zaretskii  <eliz@gnu.org>

	* frames.texi (Frame Commands): Document and index
	'frame-resize-pixelwise'.

	* windows.texi (Split Window): Document and index
	'window-resize-pixelwise'.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* ack.texi (Acknowledgments): Remove some obsolete items.
	* misc.texi (Emulation): Remove section.

2014-10-20  Glenn Morris  <rgm@gnu.org>

	* Version 24.4 released.

2014-10-13  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (dist): Update for new output variables.

2014-10-06  Glenn Morris  <rgm@gnu.org>

	* package.texi (Package Menu): The package list was changed to not
	say "unsigned" any more.

2014-10-04  Glenn Morris  <rgm@gnu.org>

	* misc.texi (Sorting):
	* search.texi (Query Replace): Markup fixes.

	* cmdargs.texi (Misc X):
	* display.texi (Optional Mode Line):
	* misc.texi (emacsclient Options):
	* vc1-xtra.texi (VC Delete/Rename): Small fixes re @var usage.

	* killing.texi (Rectangles): Copyedits re rectangle-mark-mode.
	(CUA Bindings): Mention rectangle-mark-mode.

2014-10-03  Martin Rudalics  <rudalics@gmx.at>

	* frames.texi (Frame Commands):
	* cmdargs.texi (Window Size X): Mention the use of
	`frame-resize-pixelwise' to make frames truly fullscreen or
	maximized.

2014-10-01  Glenn Morris  <rgm@gnu.org>

	* package.texi (Package Installation): Mention etc/package-keyring.gpg.

2014-07-21  Glenn Morris  <rgm@gnu.org>

	* emacs.texi (Intro): Workaround makeinfo 4 @acronym bug.  (Bug#18040)

2014-07-03  Juri Linkov  <juri@jurta.org>

	* search.texi (Regexp Search): Update lax space matching that is
	not active in regexp search by default now.  (Bug#17901)

2014-06-29  Glenn Morris  <rgm@gnu.org>

	* help.texi (Misc Help):
	* trouble.texi (Checklist): "Online" help doesn't mean what it
	used to any more.

2014-06-08  Glenn Morris  <rgm@gnu.org>

	* entering.texi (Entering Emacs): Small fix re initial-buffer-choice.
	* misc.texi (emacsclient Options): Copyedit.

	* buffers.texi (Uniquify): Copyedits.