@@ -1,3 +1,12 @@
+2014-10-23  Tassilo Horn  <tsdh@gnu.org>
+
+	* doc-view.el (doc-view-open-text): View the document's plain text
+	in the current buffer instead of a new one.
+	(doc-view-toggle-display): Handle the case where the current
+	buffer contains the plain text contents of the document.
+	(doc-view-initiate-display): Don't switch to fallback mode if the
+	user wants to view the doc's plain text.  [Backport]
+
 2014-10-23  Eli Zaretskii  <eliz@gnu.org>
 
 	* startup.el (fancy-about-text): Read the entire tutorial, not
