@@ -1,3 +1,8 @@
+2014-10-23  Tassilo Horn  <tsdh@gnu.org>
+
+	* misc.texi (Document View): Adapt to latest doc-view changes wrt
+	viewing the document's plain text contents.  [Backport]
+
 2014-10-23  Eli Zaretskii  <eliz@gnu.org>
 
 	* frames.texi (Frame Commands): Document and index
